# crude-compass

./: .gitignore  README.md  app.yaml  package.json  requirements.txt
.claude/: README.md  launch.json  settings.local.json
apps/api/: .env.example  README.md  main.py  pyproject.toml
apps/api/routers/: health.py
apps/api/services/: lakebase.py
backend/: pyproject.toml
backend/app/: __init__.py  main.py  store.py
backend/app/api/: admin.py  daily_reports.py  debug_lakebase.py  decision_room.py  demo.py  fleet.py  genie.py  jobs.py  missions.py  pattern.py  pulse.py  reactive.py  reports.py  signals.py  slack.py  supervisor.py
backend/app/core/: config.py
backend/app/db/: lakebase.py
backend/app/db/repositories/: __init__.py  agent_activity.py  backtest.py  daily_reports.py  last_seen.py  missions.py  reports.py
backend/app/schemas/: mission.py  report.py
backend/app/services/: daily_report.py  demo_scenarios.py  genie.py  mission_plan.py  oilprice_client.py  report_ai_decision.py  report_generator.py  simulation.py  slack_blocks.py  slack_bus_subscriber.py  slack_notify.py  supervisor.py  trigger_detector.py
backend/app/ws/: missions.py  pulse.py
backend/scripts/: demo_slack_reports.py  seed_diverse_reports.py
backend/tests/: test_agent_activity_repo.py  test_daily_report.py  test_decision_room_api.py  test_demo.py  test_genie.py  test_pulse_api.py  test_reports_api.py  test_reports_repo.py  test_signals_api.py  test_slack.py  test_smoke.py  test_store.py
databricks/: databricks.yml
design/: index.html
docs/: STATUS.md  api_contract.md  (+34 more)
(+182 files in other folders)
