[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "databricks-sdk[openai]>=0.81",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "psycopg[binary,pool]>=3.1",
    "pydantic>=2",
    "python-dotenv>=1.2.2",
    "slack-bolt>=1.28.0",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
