[project]
name = "crude-compass-api"
version = "0.1.0"
description = "FastAPI backend for Crude Compass — K-Petroleum Decision Support Agent"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary,pool]>=3.2.0",
    "databricks-sdk>=0.45.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "redis[hiredis]>=5.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pyright>=1.1.380",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
